# FakeIt

./: .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  FakeIt.autopkg  README.md  appveyor.yml  biicode.conf  generateSingleHeader.py  generate_fakeit_single_header.py  ignore.bii  makefile
.github/workflows/: ci_linux_clang.yml  ci_linux_gcc.yml  ci_macos_appleclang.yml  ci_windows_msvc.yml  coverage.yml  macos.yml  main.yml
benchmark/: README.md  create_benchmark.py
config/: CMakeLists.txt
config/boost/: BoostTestFakeit.hpp  fakeit_instance.hpp
config/catch/: CatchFakeit.hpp  fakeit_instance.hpp
config/cute/: CuteFakeit.hpp  fakeit_instance.hpp
config/doctest/: DoctestFakeit.hpp  fakeit.hpp  fakeit_instance.hpp
config/gtest/: GTestFakeit.hpp  fakeit_instance.hpp
config/mettle/: MettleFakeit.hpp  fakeit.hpp  fakeit_instance.hpp
config/mstest/: MsTestFakeit.hpp  fakeit_instance.hpp
config/nunit/: NUnitFakeit.hpp  fakeit_instance.hpp
config/qtest/: QTestFakeit.hpp  fakeit_instance.hpp
config/standalone/: StandaloneFakeit.hpp  fakeit.hpp  fakeit_instance.hpp
config/tpunit/: TpUnitFakeit.hpp  fakeit_instance.hpp
include/: .cproject  .project  CMakeLists.txt  api_macros.hpp  fakeit.h  fakeit.hpp  fakeit_instance.hpp
include/fakeit/: Action.hpp  ActionSequence.hpp  ActionSequenceBuilder.hpp  ActualInvocation.h  ActualInvocation.hpp  ActualInvocationHandler.hpp  ActualInvocationsSource.hpp  Behavior.hpp  DefaultErrorFormatter.h  DefaultErrorFormatter.hpp  DefaultEventFormatter.hpp  DefaultEventHandler.hpp  DefaultEventLogger.hpp  DefaultFakeit.hpp  DefaultLogger.hpp  DomainObjects.h  DomainObjects.hpp  ErrorFormatter.h  ErrorFormatter.hpp  EventFormatter.hpp  EventHandler.hpp  Exceptions.h  Expectation.hpp  FakeFunctor.hpp  FakeIt.hpp  FakeitContext.hpp  FakeitEvents.hpp  FakeitExceptions.hpp  Functional.hpp  Invocation.hpp  InvocationMatcher.h  Logger.hpp  MatchAnalysis.hpp  MatchersCollector.hpp  MethodMock.h  MethodMock.hpp  MethodMockingContext.hpp  MethodVerificationProgress.hpp  Mock.h  Mock.hpp  (+38 more)
include/mock4cpp/: ActualInvocation.h  ErrorFormatter.h  MethodMock.h  Mock.h  Stubbing.h
include/mockutils/: Accessor.hpp  DefaultValue.hpp  Destructable.h  Destructable.hpp  Destructible.hpp  DynamicProxy.h  DynamicProxy.hpp  ExtractMemberType.hpp  FakeObject.hpp  Finally.hpp  Formatter.h  Formatter.hpp  Macros.h  Macros.hpp  MethodInvocationHandler.h  MethodInvocationHandler.hpp  MethodProxy.h  MethodProxy.hpp  MethodProxyCreator.hpp  TupleDispatcher.h  TupleDispatcher.hpp  TuplePrinter.h  TuplePrinter.hpp  VTUtils.hpp  VirtualOffestSelector.h  VirtualOffestSelector.hpp  VirtualOffestSelector2.hpp  VirtualTable.hpp  are_equality_comparable.h  constexpr_hash.hpp  is_equality_comparable.hpp  smart_ptr.hpp  to_string.hpp  traits.h  traits.hpp  type_utils.hpp  union_cast.h  union_cast.hpp
mock4cpp/: Clouses.h  ClousesImpl.h  DynamicProxy.h  MethodMock.h  Mock.h  MockObject.h  Table.h  VirtualMethodOffsetLocator.h  VirtualTable.h  data_members_tests.cpp  default_behavior_tests.cpp  is_equality_comparable.hpp  mock4cpp.sln  mock4cpp.vcxproj  mock4cpp_stubbing_tests.cpp  mock4cpp_tests.cpp  mock4cpp_tests.vcxproj  mockito4cpp_tests.cpp  remove_const_volatile_tests.cpp  stdafx.cpp  stubbing_tests.cpp  utils.h
mock4cpp/include/: mock4cpp.h
mock4cpp/mock4cpp/: ActualInvocation.h  ActualInvocationSchenario.h  Clouses.h  ClousesImpl.h  DefaultValue.hpp  InvocationMatcher.h  MethodInvocation.h  MethodMock.h  Mock.h  MockRepository.h  Stubbing.h  StubbingImpl.h  mockito_clouses.h
mock4cpp/mock4cpp_tests/: ExtractMemberType.h  TupleDispatcher.h  arg_Matching_tests.cpp  arg_Matching_tests.h  data_members_tests.cpp  default_behavior_tests.cpp  invocation_matching_tests.cpp  mock4cpp_tests.sln  mock4cpp_tests.vcxproj  mockito_stubbing_tests.cpp  remove_const_volatile_tests.cpp  verify_tests.cpp  (+1 more)
msvs_tests/: data_members_tests.cpp  default_behavior_tests.cpp  invocation_matching_tests.cpp  mock4cpp_tests.vcxproj  mockito_stubbing_tests.cpp  remove_const_volatile_tests.cpp  stubbing_tests.cpp  verify_tests.cpp
samples/fakeit_with_gtest/: CMakeLists.txt  ReadMe.txt  fakeit_with_gtest.cpp  fakeit_with_gtest.sln  fakeit_with_gtest.vcxproj  stdafx.cpp
samples/fakeit_with_gtest/sources/: FailingTestDemo.cpp
single_header/: CMakeLists.txt
single_header/boost/: fakeit.hpp
single_header/catch/: fakeit.hpp
single_header/cute/: fakeit.hpp
single_header/doctest/: fakeit.hpp
single_header/gtest/: fakeit.hpp
single_header/mettle/: fakeit.hpp
single_header/mstest/: fakeit.hpp
single_header/nunit/: fakeit.hpp
single_header/parasoft/: fakeit.hpp
single_header/qtest/: fakeit.hpp
single_header/standalon/: fakeit.hpp
single_header/standalone/: fakeit.hpp
single_header/tpunit/: fakeit.hpp
tests/: .cproject  .gitignore  .project  CMakeLists.txt  FakeIt.vcxproj  VirtualOffsetSelectorTest.cpp  all_tests.sln  all_tests.vcxproj  argument_matching_tests.cpp  cpp14_tests.cpp  custom_error_formatting_tests.cpp  custom_event_formatting_tests.cpp  custom_testing_framework_tests.cpp  default_behaviore_tests.cpp  default_error_formatting_tests.cpp  default_event_formatting_tests.cpp  demo_dests.cpp  dtor_mocking_tests.cpp  event_notification_tests.cpp  exampls.cpp  functional.cpp  gcc_stubbing_multiple_values_tests.cpp  gcc_type_info_tests.cpp  inherited_funcs_tests.cpp  miscellaneous_tests.cpp  move_only_return_tests.cpp  moving_mocks_around.cpp  moving_mocks_around_tests.cpp  msc_calling_convention_tests.cpp  msc_stubbing_multiple_values_tests.cpp  msc_type_info_tests.cpp  multiple_translation_units_stub.cpp  multiple_translation_units_stub.h  multiple_translation_units_stub_test.cpp  overloadded_methods_tests.cpp  referece_types_tests.cpp  remove_const_volatile_tests.cpp  return_template_specialization.cpp  rvalue_arguments_tests.cpp  sequence_verification_tests.cpp  (+11 more)
tests/mock4cpp_tests/: .cproject  .project  all_tests.vcxproj  gcc_type_info_tests.cpp  stubbing_tests.cpp  tpunit++.hpp  tpunit++main.cpp  type_info_tests.cpp
(+100 files in other folders)
